[package]
name = "celo_light_client"
version = "0.1.0"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }
num = { version = "0.3", default-features = false }
rlp = { version = "0.4.6", default-features = false, features = ["std"] }
sha3 = { version = "0.9.1", default-features = false }
# FIXME: once https://github.com/rust-num/num-bigint/issues/172
# is merged we should switch to main crate
num-bigint = { git = "https://github.com/janmarthedal/num-bigint.git", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
anomaly = { version = "0.2.0", default-features = false }
thiserror = { version = "1.0.23", default-features = false }
bls-crypto = { git = "https://github.com/celo-org/celo-bls-snark-rs.git", default-features = false }
algebra = { git = "https://github.com/celo-org/zexe", default-features = false }

cosmwasm-std = "0.8.1"
cosmwasm-storage = "0.8.1"
schemars = "0.7.6"

# Just to build on wasm
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
secp256k1 = { version = "0.19.0", features = ["bitcoin_hashes", "rand"] }
env_logger = "0.8.2"
hyper = "0.13.9"
rand = "0.6"
rand_core = "0.4"
tokio = { version = "0.2", features = ["full"] }
sled = "0.34.6"
log = "0.4"
clap = "2.33.3"

cosmwasm-vm = { version = "0.7.2", default-features = false }

[profile.release]
opt-level = 'z'
#opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[[example]]
name = "lightest-sync"
path = "examples/lightest-sync/main.rs"
